# aranya-core

./: .editorconfig  .gitignore  0left.txt  0right.txt  CLAUDE.md  COMPILER_REFACTORING_PLAN.md  Cargo.toml  HIR_IMPLEMENTATION_PLAN.md  INVESTIGATION_NOTES.md  LICENSE.md  Makefile.toml  README.md  Status.md  TRADEMARK.md  audit.toml  cargo-watch  clang++12  clippy.toml  deny.toml  local_test_run  run_test.sh  rust-nightly.txt  rust-toolchain.toml  rustfmt.toml  taplo.toml
base58/: Cargo.toml
base58/benches/: lib.rs
base58/src/: base58.rs
canaries/canary-alloc/: Cargo.toml  README.md
canaries/canary-alloc/src/: main.rs
canaries/canary-std/: Cargo.toml  README.md
canaries/canary-std/src/: main.rs
crates/aps-util/: Cargo.toml
crates/aps-util/src/: ffi.rs  handler.rs  lib.rs  shared.rs  testing.rs  tests.rs  transform.rs
crates/aranya-afc-util/: CHANGELOG.md  Cargo.toml
crates/aranya-afc-util/src/: ffi.rs  handler.rs  lib.rs  shared.rs  testing.rs  tests.rs  transform.rs
crates/aranya-aqc-util/: CHANGELOG.md  Cargo.toml
crates/aranya-aqc-util/src/: ffi.rs  handler.rs  lib.rs  shared.rs  testing.rs  tests.rs  transform.rs
crates/aranya-base58/: Cargo.toml
crates/aranya-base58/benches/: lib.rs
crates/aranya-base58/src/: base58.rs
crates/aranya-buggy/: Cargo.toml
crates/aranya-buggy/src/: lib.rs
crates/aranya-capi-codegen/: CHANGELOG.md  Cargo.toml
crates/aranya-capi-codegen-test/: Cargo.toml  README.md  build.rs
crates/aranya-capi-codegen-test/src/: defs.rs  generated.rs  lib.rs  tests.rs
crates/aranya-capi-codegen/src/: attr.rs  ctx.rs  error.rs  gen.rs  generate.rs  lib.rs  util.rs
crates/aranya-capi-core/: CHANGELOG.md  Cargo.toml
crates/aranya-capi-core/src/: cstr.rs  error.rs  lib.rs  macros.rs  opaque.rs  safe.rs  traits.rs  utf8.rs
crates/aranya-capi-macro/: CHANGELOG.md  Cargo.toml
crates/aranya-capi-macro/src/: error.rs  lib.rs  opaque.rs
crates/aranya-core/: CHANGELOG.md  Cargo.toml
crates/aranya-core-example/: Cargo.toml  build.rs
crates/aranya-core-example/src/: main.rs  policy.md  policy.rs
crates/aranya-core/examples/: simple.rs
crates/aranya-core/src/: client.rs  crypto.rs  id.rs  lib.rs
crates/aranya-core/tests/: crypto_reexports.rs  id.rs
crates/aranya-crypto/: CHANGELOG.md  Cargo.toml  README.md
crates/aranya-crypto-core/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
crates/aranya-crypto-core/.cargo/: config.toml
crates/aranya-crypto-core/src/: aead.rs  asn1.rs  bearssl.rs  csprng.rs  default.rs  ec.rs  ed25519.rs  error.rs  hash.rs  hex.rs  hkdf.rs  hmac.rs  hpke.rs  import.rs  kdf.rs  kem.rs  keys.rs  lib.rs  mac.rs  rust.rs  signer.rs  traits.rs  util.rs  xof.rs  zeroize.rs
crates/aranya-crypto-derive/: CHANGELOG.md  Cargo.toml
crates/aranya-crypto-derive/src/: alg_id.rs
crates/aranya-crypto-ffi/: CHANGELOG.md  Cargo.toml
crates/aranya-crypto-ffi/src/: error.rs  ffi.rs  testing.rs  tests.rs
crates/aranya-crypto/benches/: context.rs
crates/aranya-crypto/examples/: basic.rs
crates/aranya-crypto/src/: aead.rs  apq.rs  aranya.rs  asn1.rs  bearssl.rs  boring.rs  ciphersuite.rs  csprng.rs  default.rs  ed25519.rs  engine.rs  error.rs  groupkey.rs  hash.rs  hkdf.rs  hmac.rs  hpke.rs  id.rs  kdf.rs  kem.rs  keys.rs  lib.rs  misc.rs  oid.rs  policy.rs  rust.rs  tests.rs  tls.rs  tuple_hash.rs  util.rs  xof.rs
crates/aranya-crypto/tests/: lib.rs  raw_secret_seed_zeroize.rs
crates/aranya-envelope-ffi/: CHANGELOG.md  Cargo.toml
crates/aranya-envelope-ffi/src/: error.rs  ffi.rs  tests.rs
crates/aranya-fast-channels/: CHANGELOG.md  Cargo.toml  Makefile.toml
crates/aranya-fast-channels/benches/: lib.rs
crates/aranya-fast-channels/src/: arena.rs  buf.rs  client.rs  crypto.rs  errno.rs  error.rs  features.rs  header.rs  lender.rs  lib.rs  memory.rs  mutex.rs  rust.rs  state.rs  util.rs
crates/aranya-id/: CHANGELOG.md  Cargo.toml
crates/aranya-id/src/: id.rs  lib.rs
crates/aranya-id/tests/: lib.rs
crates/aranya-idam-ffi/: CHANGELOG.md  Cargo.toml
crates/aranya-idam-ffi/src/: error.rs  ffi.rs  lib.rs  testing.rs  tests.rs
crates/aranya-libc/: CHANGELOG.md  Cargo.toml
crates/aranya-libc/src/: api.rs  errno.rs  lib.rs  path.rs
crates/aranya-model/: Cargo.toml
crates/aranya-model/src/: lib.rs  model.rs
crypto/: Cargo.toml
crypto/src/: aead.rs  apq.rs  aps.rs  aranya.rs  asn1.rs  bearssl.rs  boring.rs  ciphersuite.rs  csprng.rs  default.rs  ec.rs  ed25519.rs  engine.rs  error.rs  features.rs  groupkey.rs  hash.rs  hex.rs  hkdf.rs  hmac.rs  hpke.rs  hybrid_array.rs  id.rs  idam.rs  import.rs  kdf.rs  kem.rs  keys.rs  lib.rs  mac.rs  misc.rs  rust.rs  signer.rs  test_util.rs  tests.rs  userkeys.rs  util.rs
crypto/src/testdata/: HpkeDhKemP256HkdfSha256HkdfSha256ExportOnly.json  HpkeDhKemP256HkdfSha256HkdfSha512Aes256Gcm.json  HpkeDhKemP521HkdfSha512HkdfSha256Aes128Gcm.json  HpkeDhKemP521HkdfSha512HkdfSha256Aes256Gcm.json  HpkeDhKemP521HkdfSha512HkdfSha512ChaCha20Poly1305.json  HpkeDhKemX25519HkdfSha256HkdfSha256Aes128Gcm.json  HpkeDhKemX25519HkdfSha256HkdfSha256ExportOnly.json  HpkeDhKemX25519HkdfSha256HkdfSha512Aes128Gcm.json  HpkeDhKemX25519HkdfSha256HkdfSha512ExportOnly.json  HpkeDhKemX448HkdfSha512HkdfSha512Aes256Gcm.json
crypto/tests/: lib.rs
flow_runtime/: Cargo.toml
flow_runtime/src/: client.rs  command.rs  engine.rs  lib.rs
flow_runtime/src/storage/: memory.rs  mod.rs
flow_runtime/src/sync/: mod.rs
flow_runtime/src/tests/: mod.rs  protocol.rs  tests_api.rs  three_client_sync.test  two_client_merge.test  two_client_sync.test
policy-lang/: .gitignore  Cargo.toml  test-policy.md
policy-lang/doc/: machine-model.md
policy-lang/src/: lib.rs  machine.rs  policy.rs
policy-lang/src/lang/: ast.rs  parse.rs  tictactoe-policy.md  tictactoe.policy
policy-lang/src/machine/: compile.rs  data.rs  error.rs  ffi.rs  instructions.rs  io.rs  tests.rs
policy-lang/src/policy/: ast.rs  parse.rs  tictactoe.policy
rtrack_derive/: Cargo.toml
rtrack_derive/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: command.rs  engine.rs  lib.rs  storage.rs  sync.rs
(+1753 files in other folders)
