[package]
name = "base58"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
publish = false

[lib]

[features]
default = []
# Enable alloc
alloc = []
# Enable std
std = ["alloc"]

[dependencies]
byteorder = { workspace = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5" }
flate2 = { version = "1" }
hex = { version = "0.4" } 
rand = { workspace = true, default-features = false, features = ["std_rng", "getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }

[[bench]]
name = "lib"
harness = false

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
always_include_features = []

denylist = []
