[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
publish = false

[lib]

[features]
default = []

# Enable allocations.
alloc = [
	"zeroize/alloc",
	"postcard/alloc",
]

# Enable BoringSSL.
boringssl = [
	"alloc",
	"dep:bssl-sys",
]

# Makes `OsRng` implement `Csprng`.
rand_core = [
	"dep:rand_core",
]

# Use std.
std = [
	"alloc",
	# If we're already using `std`, we might as well enable
	# `Csprng` support for `OsRng`. Doing this makes the
	# `#[cfg(...)]` blocks easier to manage.
	"rand_core",
	# We only pull in `rand` when `std` is enabled since we only
	# use it for `ThreadRng`.
	"dep:rand",
]

# Include testing utilities.
test_util = [
	"dep:serde_json",
	"dep:serde_repr",
	"dep:wycheproof",
]

#
# Nightly features
#

# Makes the various "error" types implement `core::error::Error`.
# If `std` is enabled, this is a no-op.
error_in_core = []
result_option_inspect = []

[dependencies]
base58 = { path = "../base58" }
# TODO(eric): merge all-headers into main and update the branch.
bssl-sys = { git = "https://github.com/spideroak-inc/bssl.git", branch = "all-headers", optional = true }
bearssl-sys = { git = "https://github.com/spideroak-inc/bearssl.git", branch = "main" }
byteorder = { workspace = true, default-features = false }
cfg-if = { workspace = true }
der = { version = "0.7" }
getrandom = { version = "0.2", features = ["custom"] }
heapless = { workspace = true }
postcard = { workspace = true, default-features = false, features = ["heapless"] }
more-asserts = { version = "0.3" }
# `rand_core` is only pulled in when `rand_core` is enabled. It's
# only used to add trait impls for `OsRng`.
rand_core = { workspace = true, default-features = false, features = ["getrandom"], optional = true }
# `rand` is only pulled in when `std` is enabled. It's only used
# to add trait impls for `ThreadRng`.
rand = { workspace = true, features = ["std", "std_rng"], optional = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, optional = true }
serde_repr = { version = "0.1", default-features = false, optional = true }
subtle = { version = "2.5", default-features = false, features = ["core_hint_black_box"] }
typenum = { version = "1" }
# Only pulled into non-dev builds if `test_util` is enabled. It
# won't bloat release builds, though, since users of this crate
# should only use this feature inside [dev-dependencies].
wycheproof = { version = "0.5", optional = true }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
postcard = { workspace = true, features = ["alloc", "heapless"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde_repr = { version = "0.1", default-features = false }
wycheproof = { version = "0.5" }

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
always_include_features = []

denylist = [
	"error_in_core",
	"result_option_inspect",
]
