[package]
name = "rtrack_derive"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[features]
default = []

# Enable some debugging.
debug = []

# Enable the Spira integration.
spira = [
	"dep:proc-macro2",
	"dep:quote",
	"dep:syn",
]

[dependencies]
log = { workspace = true }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "2.0", optional = true, features = ["full", "parsing", "proc-macro", "printing"] }

[package.metadata.docs.rs]
all-features = true
