[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "alloc" ]

alloc = []
std = [ "alloc" ]

[dependencies]
# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "1.0.*", default-features = false, features = ["derive"] }
heapless = { version = "0.7.16", features = ["serde"] }
