[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[features]
default = [ "alloc" ]

alloc = []
std = [ "alloc" ]

[dependencies]
heapless = { version = "0.7.16", features = ["serde"] }
log = { workspace = true, default-features = false }
serde = { version = "1.0.*", default-features = false, features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"
serde_json = "1"
