[package]
name = "canary-alloc"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# `aranya-crypto` enables `getrandom` by default.
aranya-crypto = { path = "../../crates/aranya-crypto", default-features = false }
