[package]
name = "canary-std"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# aranya-afc-util = { path = "../../crates/aranya-afc-util", features = ["alloc"] }
# `aranya-crypto` enables `getrandom` by default.
aranya-crypto = { path = "../../crates/aranya-crypto", default-features = false, features = [
	"alloc",
	"committing-aead",
	"clone-aead",
	"proptest",
	"rand_compat",
] }
aranya-crypto-ffi = { path = "../../crates/aranya-crypto-ffi", features = ["alloc"] }
aranya-device-ffi = { path = "../../crates/aranya-device-ffi", features = ["alloc"] }
aranya-envelope-ffi = { path = "../../crates/aranya-envelope-ffi", features = ["alloc"] }
aranya-idam-ffi = { path = "../../crates/aranya-idam-ffi", features = ["alloc"] }
aranya-perspective-ffi = { path = "../../crates/aranya-perspective-ffi", features = ["alloc"] }
aranya-policy-ast = { path = "../../crates/aranya-policy-ast" }
aranya-policy-module = { path = "../../crates/aranya-policy-module" }
aranya-policy-vm = { path = "../../crates/aranya-policy-vm", features = ["derive"] }
# These features must also be no-std.
aranya-runtime = { path = "../../crates/aranya-runtime", features = ["testing"] }
