[package]
name = "aps-util"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]

[features]
default = [
	"alloc",
]

# Enable allocations.
alloc = []

# Enable the `testing` module.
testing = [
	"alloc",

	"dep:indexmap",
	"dep:siphasher",
	"dep:spin",
]

[dependencies]
aps = { git = "https://git.spideroak-inc.com/spideroak-inc/aps.git", branch = "main", default-features = false, features = ["alloc"] }
cfg-if = { workspace = true, default-features = false }
crypto = { path = "../crypto", default-features = false, features = ["alloc"] }
indexmap = { version = "2.1", default-features = false, optional = true }
policy-vm = { path = "../policy-vm", default-features = false, features = ["derive"] }
postcard = { workspace = true, default-features = false, features = ["heapless"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
siphasher = { version = "1", default-features = false, optional = true }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"], optional = true }
tracing = { workspace = true, default-features = false }
trouble = { path = "../trouble", default-features = false }

[dev-dependencies]
aps = { git = "https://git.spideroak-inc.com/spideroak-inc/aps.git", branch = "main", default-features = false, features = ["memory", "std"] }
# A little bit of a hack: always certain features for tests and
# examples.
aps-util = { path = ".", features = ["testing"] }

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
always_include_features = []

skip_feature_sets = []

denylist = []
