[package]
name = "aranya-afc-util"
description = "Utilities for using Aranya Fast Channels"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]

[features]
default = [
	"alloc",
]

# Enable allocations.
alloc = []

std = [
	"aranya-crypto/std",
	"aranya-fast-channels/std",
	"aranya-policy-vm/std",
	"indexmap?/std",
	"postcard/use-std",
	"serde/std",
	"siphasher?/std",
	"spin?/std",
	"tracing/std",
]

# Enable the `testing` module.
testing = [
	"alloc",

	"dep:indexmap",
	"dep:siphasher",
	"dep:spin",
]

[dependencies]
aranya-crypto = { version = "0.2.2", path = "../aranya-crypto", default-features = false, features = ["alloc"] }
aranya-fast-channels = { version = "0.3.1", path = "../aranya-fast-channels", default-features = false, features = ["alloc"] }
aranya-policy-vm = { version = "0.3.2", path = "../aranya-policy-vm", default-features = false, features = ["derive"] }

indexmap = { version = "2.1", default-features = false, optional = true }
postcard = { workspace = true, default-features = false, features = ["heapless"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
siphasher = { version = "1", default-features = false, optional = true }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
# A little bit of a hack: always certain features for tests and
# examples.
aranya-afc-util = { path = ".", features = ["testing"] }

aranya-fast-channels = { path = "../aranya-fast-channels", default-features = false, features = ["memory", "std"] }

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
always_include_features = []

skip_feature_sets = []

denylist = []
