[package]
name = "aranya-afc-util"
description = "Utilities for using Aranya Fast Channels"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]

[features]
default = [
	"alloc",
]

# Enable allocations.
alloc = []

std = [
	"aranya-crypto/std",
	"aranya-fast-channels/std",
	"aranya-policy-vm/std",
	"indexmap?/std",
	"postcard/use-std",
	"serde/std",
	"siphasher?/std",
	"spin/std",
	"thiserror/std",
	"tracing/std",
]

# Enable the `testing` module.
testing = [
	"alloc",

	"dep:indexmap",
	"dep:siphasher",
]

[dependencies]
aranya-crypto = { version = "0.6.0", path = "../aranya-crypto", default-features = false, features = ["alloc"] }
aranya-fast-channels = { version = "0.7.0", path = "../aranya-fast-channels", default-features = false, features = ["alloc"] }
aranya-policy-vm = { version = "0.8.0", path = "../aranya-policy-vm", default-features = false, features = ["derive"] }
buggy = { version = "0.1.0", default-features = false }
indexmap = { version = "2.1", default-features = false, optional = true }
postcard = { workspace = true, default-features = false, features = ["heapless"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
siphasher = { version = "1", default-features = false, optional = true }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# A little bit of a hack: always certain features for tests and
# examples.
aranya-afc-util = { path = ".", features = ["testing"] }

aranya-fast-channels = { path = "../aranya-fast-channels", default-features = false, features = ["memory", "std"] }

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
always_include_features = []

skip_feature_sets = []

denylist = []
