[package]
name = "aranya-base58"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]

[features]
default = []
# Enable alloc
alloc = ["aranya-buggy/alloc"]
# Enable std
std = ["alloc", "aranya-buggy/std"]

[dependencies]
aranya-buggy = { path = "../aranya-buggy" }

byteorder = { workspace = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5" }
flate2 = { version = "1" }
hex = { version = "0.4" }
rand = { workspace = true, default-features = false, features = ["std_rng", "getrandom"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1" }

[[bench]]
name = "lib"
harness = false

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-all-features]
always_include_features = []

skip_feature_sets = [
	["std", "alloc"],
]

denylist = []
