[package]
name = "aranya-capi-codegen"
description = "Code generation for Aranya's C API tooling"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []

debug = []

[dependencies]
aho-corasick = { version = "1.1.3" }
anyhow = { workspace = true, features = ["std"] }
bimap = { version = "0.6.3" }
codespan-reporting = { version = "0.11.1" }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }
syn = { workspace = true, features = ["extra-traits", "full", "visit-mut"] }
tracing = { workspace = true, features = ["std"] }
