[package]
name = "aranya-capi-core"
description = "Aranya's C API tooling"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []

# Enable `ciborium` support.
ciborium = [
	"dep:ciborium-io",
]

# Enable debugging.
debug = ["aranya-capi-macro/debug"]

# Enable `std`.
std = [
	"aranya-libc/std",
	"buggy/std",
	"ciborium-io?/std",
	"thiserror/std",
]

[dependencies]
aranya-capi-macro = { version = "0.3.0", path = "../aranya-capi-macro", default-features = false }
aranya-libc = { version = "0.2.0", path = "../aranya-libc", default-features = false }
buggy = { version = "0.1.0", default-features = false }

cfg-if = { workspace = true, default-features = false }
const_format = { version = "0.2.31", default-features = false, features = ["assertcp"] }
elain = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true, default-features = false }

ciborium-io = { version = "0.2.2", default-features = false, optional = true }

[dev-dependencies]
libc = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry", "std"] }
tracing-test = { version = "0.2.5" }
