[package]
name = "aranya-capi-macro"
description = "Proc macros for Aranya's C API tooling"
version = "0.3.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[features]
default = []

debug = ["aranya-capi-codegen/debug"]

[dependencies]
aranya-capi-codegen = { version = "0.3.3", path = "../aranya-capi-codegen" }

proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full"] }
tracing = { workspace = true, features = ["std"] }
